src/objects/ADvendio__Ratestep__c.object
<CustomObject>
    <fields>
        <fullName>ADvendio__AdPrice__c</fullName>
        <description>Defines relationship to parent record &quot;Ad Price&quot;.</description>
        <inlineHelpText>Defines relationship to parent record &quot;Ad Price&quot;.</inlineHelpText>
        <label>Ad Price</label>
        <referenceTo>ADvendio__Ad_price__c</referenceTo>
        <relationshipLabel>Ratesteps</relationshipLabel>
        <relationshipName>Ratesteps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ADvendio__From__c</fullName>
        <label>From</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__Rate__c</fullName>
        <description>Rate for defined range.</description>
        <label>Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__UniqueKey__c</fullName>
        <description>Enter a UniqueKey (recommended: syntax) for this rate step.</description>
        <externalId>true</externalId>
        <inlineHelpText>Enter a UniqueKey (recommended: syntax) for this rate step.</inlineHelpText>
        <label>Unique Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ADvendio__UpTo__c</fullName>
        <label>Up to</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P7S1_IdOld__c</fullName>
        <description>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</description>
        <inlineHelpText>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</inlineHelpText>
        <label>P7S1_IdOld</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Ratestep</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <columns>NAME</columns>
        <columns>ADvendio__AdPrice__c</columns>
        <columns>ADvendio__Rate__c</columns>
        <columns>ADvendio__UpTo__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ADvendio__RatestepsAll</fullName>
        <columns>NAME</columns>
        <columns>ADvendio__AdPrice__c</columns>
        <columns>ADvendio__From__c</columns>
        <columns>ADvendio__UpTo__c</columns>
        <columns>ADvendio__Rate__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Step-{0}</displayFormat>
        <label>Ratestep Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ratesteps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ADvendio__CheckCurrency</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT(CurrencyIsoCode)  &lt;&gt;  TEXT(ADvendio__AdPrice__r.CurrencyIsoCode)</errorConditionFormula>
        <errorDisplayField>CurrencyIsoCode</errorDisplayField>
        <errorMessage>The currency must be the same as the Ad-Price&apos;s currency.</errorMessage>
    </validationRules>
</CustomObject>